testsuite/escript/classes/fail-baseclass-no-ctor-03.err
fail-baseclass-no-ctor-03.src:8:15: error: Base class 'BaseClass' does not define a constructor.