testsuite/escript/classes/fail-baseclass-no-ctor-03.src
// A class that has a variable with same the same name cannot be used as a base
// class: the variable is not a (constructor) function.

class BaseClass()
  var BaseClass := @(){};
endclass

class Animal( BaseClass )
  function Animal( this ) endfunction
endclass

Animal();